language update  refs #3430

--- a/lang/cs.json
+++ b/lang/cs.json
@@ -32,6 +32,7 @@
         "ChooseLanguage": "Zvolte jazyk",
         "ChoosePeriod": "Zvolte období",
         "ChooseWebsite": "Zvolte web",
+        "Clear": "Vyčistit",
         "ClickHere": "Klikněte zde pro více informací",
         "ClickToChangePeriod": "Klikni znovu pro změnu období.",
         "Close": "Zavřít",
