--- a/lang/fa.json
+++ b/lang/fa.json
@@ -153,8 +153,10 @@
         "ExceptionPrivilege": "شما نمی توانید به این منبع دسترسی داشته باشید زیرا این به دسترسی %s نیاز دارد.",
         "ExceptionPrivilegeAccessWebsite": "شما می توانید به این منبع دسترسی داشته باشید نه به عنوان آن نیاز به %s دسترسی به سایت id = %d.",
         "ExceptionPrivilegeAtLeastOneWebsite": "شما نمی توانید به این منبع دسترسی پیدا کنید زیرا این حداقل به دسترسی %s برای یک وبسایت نیاز دارید.",
+        "ExceptionReportNotFound": "گزارش درخواست شده وجود ندارد.",
         "ExceptionUnableToStartSession": "قادر به شروع جلسه نیست.",
         "ExceptionUndeletableFile": "غیر قابل حذف %s",
+        "ExceptionWidgetNotFound": "ویجت درخواست شده وجود ندارد.",
         "Export": "خروجی گرفتن",
         "ExportAsImage": "عکس به عنوان خروجی",
         "ExportThisReport": "این مجموعه داده ها را در قالب های دیگری خروجی بده",
@@ -328,6 +330,7 @@
         "Seconds": "%sثانیه",
         "SeeAll": "دیدن همه",
         "SeeTheOfficialDocumentationForMoreInformation": "برای اطلاعات بیشتر %sمستندات رسمی%s را ببینید.",
+        "Segment": "سگمنت",
         "SelectYesIfYouWantToSendEmailsViaServer": "انتخاب \"بله\" اگر شما می خواهید و یا مجبور به ارسال ایمیل از طریق یک سرور به جای تابع ایمیل محلی به نام",
         "Settings": "تنظيمات",
         "Shipping": "هزینه پستی",
@@ -435,6 +438,7 @@
         "ChooseHttpTimeout": "مقدار فاصله را انتخاب کنید HTTP",
         "ChooseMetric": "معیار را انتخاب کنید",
         "ChooseReport": "یک گزارش را انتخاب کنید",
+        "ChooseSegment": "انتخاب سگمنت",
         "ConfirmRemoveAccount": "آیا شما می خواهیداین حساب را حذف کنید؟",
         "DefaultReportDate": "تاریخ گزارش",
         "EmailUs": "به ما ایمیل بزنید",
