--- a/plugins/Actions/lang/ja.json
+++ b/plugins/Actions/lang/ja.json
@@ -1,5 +1,6 @@
 {
     "Actions": {
+        "AvgGenerationTimeTooltip": "%s ～ %s の間の %s のヒット %s に基づく平均",
         "ColumnClickedURL": "クリックされた URL",
         "ColumnClicks": "クリック数",
         "ColumnClicksDocumentation": "このリンクがクリックされた回数",
