--- a/plugins/Actions/lang/ru.json
+++ b/plugins/Actions/lang/ru.json
@@ -42,6 +42,7 @@
         "SiteSearchCategories2": "Например, сайты электронной коммерции обычно имеют выбор `Категорий` товаровуслуг, чтобы посетителям было удобно их сортировать и искать.",
         "SiteSearchFollowingPagesDoc": "Когда посетители ищут что-то на вашем сайте, они хотят найти определенную страницу, контент, продукт или услугу. Этот отчет отображает страницы, по которым посетители кликают наиболее часто при поиске. Иными словами, это список страниц, которые ищутся наиболее часто на вашем сайте.",
         "SiteSearchIntro": "Отслеживание поиска на вашем сайте - эффективный способ узнать, чем именно интересуется ваша аудитория. Это может помочь найти идеи для нового контента, новых продуктов и улучшить взаимодействие посетителей с вашим сайта в целом.",
+        "SiteSearchKeyword": "Ключевое слово (поиск по сайту)",
         "SiteSearchKeywordsDocumentation": "Эти отчет показывает список ключевых слов, которые посетители искали на вашем сайте через ваш поиск.",
         "SiteSearchKeywordsNoResultDocumentation": "Этот отчет отображает список ключевых слов, по которым не было ничего найдено на вашем сайте: возможно, стоит улучшить поисковый алгоритм на вашем сайте или посетители ищут то, чего на вашем сайте нет?",
         "SubmenuPagesEntry": "Страницы входа",
