--- a/plugins/CoreHome/lang/fa.json
+++ b/plugins/CoreHome/lang/fa.json
@@ -10,6 +10,7 @@
         "DonateCall1": "استفاده از پیویک هیچگاه هزینه ای برای شما نخواهد داشت ، اما این به این معنا نیست که ما هم برای تولید آن هزینه ای نمی کنیم.",
         "DonateCall2": "پیویک به حمایت همیشگی شما برای رشد و پیشرفت نیاز دارد.",
         "DonateFormInstructions": "با کلیک بر روی نوار لغزنده و انتخاب مقدار کنید، و سپس دکمه ی مشترک به کمک مالی را بزنید",
+        "ExternalHelp": "راهنما (در tab جدید)",
         "FlattenDataTable": "این گزارش سلسله مراتبی است %sآن را مسطح کن",
         "HowMuchIsPiwikWorth": "چقدر پیویک برای شما ارزش دارد؟",
         "InjectedHostEmailBody": "درود، من امروز برای دسترسی به پیویک تلاش کردم و هشدار نام هاست نامشخص را دریافت کردم.",
@@ -19,6 +20,7 @@
         "MakeADifference": "یک تفاوت ایجاد کنید: %1$sبه پیویک هدیه بدهید%2$s تا در پیویک 2.0 سرمایه گذاری کنیم!",
         "MakeOneTimeDonation": "یک بار کمک مالی انجام دهید.",
         "NoPrivilegesAskPiwikAdmin": "شما به عنوان %s وارد شده اید , اما به نظر می رسد که شما اجازه دسترسی به هیچ بخشی از پیویک را ندارید. %s از مدیریت پیویک تان بخواهید (برای ارسال ایمیل کلیک کنید)%s تا به شما دسترسی \"مشاهده\" یک وبسایت را بدهد.",
+        "OnlyForSuperUserAccess": "این ویجت فقط برای کاربران با دسترسی ابرکاربر قابل مشاهده است.",
         "PageOf": "%1$s از %2$s",
         "PeriodDay": "روز",
         "PeriodDays": "روزها",
