--- a/plugins/CoreUpdater/lang/fa.json
+++ b/plugins/CoreUpdater/lang/fa.json
@@ -25,6 +25,9 @@
         "MajorUpdateWarning2": "توصیه ای که در ادامه می آید به طور ویژه برای نصب های بزرگ مهم می باشد.",
         "NoteForLargePiwikInstances": "نکات مهم برای نصب های بزرگ پیویک",
         "NoteItIsExpectedThatQueriesFail": "توجه: اگر شما این پرس و جو ها را دستی انجام داده اید , انتظار می رود که بعضی از آنها به شکست بیانجامد. در این مورد , به سادگی از خطاها رد شوید و بعدی را اجرا کنید.",
+        "NotificationClickToUpdatePlugins": "برای بروزرسانی پلاگین ها اینجا کلیک کنید:",
+        "NotificationClickToUpdateThemes": "برای بروزرسانی قالب ها اینجا کلیک کنید:",
+        "NotificationSubjectAvailablePluginUpdate": "بروزرسانی های موجود برای پلاگین های پیویک",
         "PiwikHasBeenSuccessfullyUpgraded": "پیویک با موفقیت به روزرسانی شد!",
         "PiwikUpdatedSuccessfully": "پیویک با موفقیت به روز رسانی شد!",
         "PiwikWillBeUpgradedFromVersionXToVersionY": "پایگاه داده ی پیویک از نسخه ی %1$s به نسخه ی %2$s ارتقا پیدا خواهد کرد.",
