--- a/plugins/CoreUpdater/lang/ja.json
+++ b/plugins/CoreUpdater/lang/ja.json
@@ -4,6 +4,7 @@
         "CreatingBackupOfConfigurationFile": "%s の設定ファイルのバックアップを作成中",
         "CriticalErrorDuringTheUpgradeProcess": "アップグレード処理中の致命的なエラー：",
         "DatabaseUpgradeRequired": "データベースのアップグレードが必要",
+        "DisablingIncompatiblePlugins": "互換性のないプラグインを無効にします: %s",
         "DownloadingUpdateFromX": "%s からアップデートをダウンロード中",
         "DownloadX": "ダウンロード %s",
         "EmptyDatabaseError": "データベース %s は空です。 Piwik 設定ファイルを編集または削除する必要があります。",
@@ -18,19 +19,29 @@
         "ExceptionArchiveEmpty": "空のアーカイブです。",
         "ExceptionArchiveIncompatible": "互換性のないアーカイブ： %s",
         "ExceptionArchiveIncomplete": "アーカイブが不完全です：いくつかのファイルが不足しています（%s など）。",
+        "FeedbackRequest": "あなたのアイデアや提案を、ここで Piwik チームにシェアしてください :",
         "HelpMessageContent": "アップグレードの間、最も一般的なエラーを説明している %1$s Piwik FAQ %2$sをチェックしてください。%3$s システム管理者にお尋ねください － 彼らはたいていの場合、サーバや MySQL のセットアップに関係するエラーについて、あなたの手助けができるでしょう。",
         "HelpMessageIntroductionWhenError": "上記はコアのエラーメッセージです。 原因の説明に役立つはずですが、さらなるヘルプが必要であればこちらをどうぞ：",
         "HelpMessageIntroductionWhenWarning": "アップグレードは正常に完了しましたが、処理中に問題がありました。 詳細は上記の説明をお読みください。 さらなるヘルプ：",
+        "HighTrafficPiwikServerEnableMaintenance": "高トラフィックの Piwik サーバーを管理する場合、 %smomentarily disable visitor Tracking and put the Piwik User Interface in maintenance mode%s をお勧めします。",
+        "IncompatbilePluginsWillBeDisabledInfo": "注 : 一部のプラグインは、Piwik %s に互換性がありません。アップグレード時に、これらのプラグインは無効になります。",
         "InstallingTheLatestVersion": "最新バージョンをインストール中",
         "MajorUpdateWarning1": "これは最新版へのアップデートです！通常よりも時間がかかります",
+        "MajorUpdateWarning2": "以下のアドバイスは、特に大規模なインストールの際、重要です。",
         "NoteForLargePiwikInstances": "Piwik のデータベースが大きい場合の重要注意",
         "NoteItIsExpectedThatQueriesFail": "注意： これらのクエリーを手作業で実行する場合、クエリーのいくつかは失敗することが予想されます。 その場合は単にエラーを無視し、リスト内の次のクエリーを実行してください。",
+        "NotificationClickToUpdatePlugins": "お使いのプラグインを今すぐアップデートするにはここをクリック:",
+        "NotificationClickToUpdateThemes": "お使いのテーマを今すぐアップデートするにはここをクリック:",
+        "NotificationSubjectAvailableCoreUpdate": "新しい Piwik %s　が利用可能です。",
+        "NotificationSubjectAvailablePluginUpdate": "お使いの Piwik プラグインのアップデートが可能です。",
         "PiwikHasBeenSuccessfullyUpgraded": "Piwik は正常にアップグレードされました！",
         "PiwikUpdatedSuccessfully": "Piwik は正常にアップデートされました！",
         "PiwikWillBeUpgradedFromVersionXToVersionY": "Piwik データベースが %1$s から新バージョン %2$s にアップグレードされます。",
         "PluginDescription": "Piwik アップデートメカニズム",
         "ReadyToGo": "実行してもよろしいですか？",
+        "TheFollowingDimensionsWillBeUpgradedX": "以下の範囲をアップデートします: %s",
         "TheFollowingPluginsWillBeUpgradedX": "次のプラグインはアップグレードされます： %s",
+        "ThereIsNewPluginVersionAvailableForUpdate": "お使いのいくつかのプラグインは、マーケットプレイス上でアップデートされています:",
         "ThereIsNewVersionAvailableForUpdate": "アップデート可能な Piwik の新バージョンがあります。",
         "TheUpgradeProcessMayFailExecuteCommand": "Piwik のデータベースが大きい場合、ブラウザでのアップデートの実行には長い時間がかかる場合があります。 このような場合、コマンドラインからアップデートを実行することができます： %s",
         "TheUpgradeProcessMayTakeAWhilePleaseBePatient": "アップグレード処理には時間がかかる場合がありますが、しばらくお待ちください。",
