--- a/plugins/Events/lang/ru.json
+++ b/plugins/Events/lang/ru.json
@@ -1,5 +1,6 @@
 {
     "Events": {
+        "Event": "Событие",
         "MaxValue": "Максимальное значение",
         "MaxValueDocumentation": "Максимальное значения для этого события",
         "MinValue": "Минимальное значение",
