--- a/plugins/Goals/lang/cs.json
+++ b/plugins/Goals/lang/cs.json
@@ -60,6 +60,7 @@
         "GoalX": "Cíl: %s",
         "HelpOneConversionPerVisit": "Pokud byla stránka odpovídající cíli při návštěvě obnovena nebo zobrazena vícekrát, bude cíl započítán pouze jednou a to při prvním zobrazení.",
         "IsExactly": "je přesně %s",
+        "LearnMoreAboutGoalTrackingDocumentation": "Více o %s sledování cílů %s se dozvíte v uživatelské dokumentaci Piwiku.",
         "LeftInCart": "%s Zbylo v košíku",
         "Manually": "ručně",
         "ManuallyTriggeredUsingJavascriptFunction": "Cíl je ručně zaznamenáván pomocí JavaScriptového API trackGoal()",
@@ -81,6 +82,7 @@
         "Products": "Produktů",
         "ProductSKU": "SKU produktu",
         "ReturningVisitorsConversionRateIs": "Poměr konverze navracejících se uživatelů je %s",
+        "SendEvent": "Poslat událost",
         "SingleGoalOverviewDocumentation": "Toto je přehled konverzí jednoho cíle. %s Linky lze zvětšit kliknutím na ně.",
         "UpdateGoal": "Aktualizovat cíl",
         "URL": "URL",
