--- a/plugins/CoreAdminHome/lang/fa.json
+++ b/plugins/CoreAdminHome/lang/fa.json
@@ -1,6 +1,7 @@
 {
     "CoreAdminHome": {
         "Administration": "مدیریت",
+        "ArchivingSettings": "تنظیمات بایگانی",
         "BrandingSettings": "تنظیمات نام تجاری",
         "CheckReleaseGetVersion": "زمانی که برای نسخه جدید پیویک چک میکنید , همیشه ان را بگیرید",
         "ClickHereToOptIn": "اینجا را کلیک کنید تا انتخاب شوید.",
@@ -8,6 +9,7 @@
         "CustomLogoFeedbackInfo": "اگر شما آرم پیویک را سفارشی کنید , شاید برایتان جالب باشد که لینک %s را در منوی بالایی پنهان کنید.برای این کار شما می توانید افزونه ی بازخورد را در صفحه %sمدیریت افزونه ها%s غیرفعال کنید.",
         "CustomLogoHelpText": "شما می توانید آرم Piwik سفارشی است که در رابط کاربری و گزارش پست الکترونیک نمایش داده خواهد شد.",
         "EmailServerSettings": "تنضیمات میل سرور",
+        "FaviconUpload": "یک Favicon انتخاب کنید تا آپلود شود.",
         "ForBetaTestersOnly": "فقط برای استفاده کنندهای موقطی",
         "ImageTracking": "ردیابی تصویر",
         "ImageTrackingIntro1": "زمانی که مشاهده کنندگان جاوا اسکریپت رو غیر فعال کنند , یا از جاوا اسکریپت استفاده نکنند , شما میتونید از عکس اسفاده کنید و لینک را به یازدید کننده بدهید.",
@@ -46,6 +48,7 @@
         "PluginSettings": "تنظیمات افزونه ها",
         "PluginSettingsIntro": "در اینجا شما می توانید تغییراتی در تنظیمات پلاگین های زیر انجام دهید :",
         "PluginSettingsValueNotAllowed": "مقدار این رشته \"%s\" در پلاگین \"%s\" مورد قبول نیست",
+        "SendPluginUpdateCommunication": "زمانی که یک بروزرسانی از پلاگین وجود داشت برای من یک ایمیل بفرست",
         "TrackAGoal": "به دنبال یک هدف",
         "TrackingCode": "کد ردیابی",
         "TrustedHostConfirm": "آیا از تغییر نام هاست مورد اعتماد پیویک اطمینان دارید؟",
