--- a/plugins/CoreAdminHome/lang/ja.json
+++ b/plugins/CoreAdminHome/lang/ja.json
@@ -11,6 +11,7 @@
         "DevelopmentProcess": "私たちの%s開発プロセス%sは自動化された数千のテストを含んでいますが、ベータテスターはPiwikの\"No bug policy\"達成のための重要な役割を果たしています。",
         "EmailServerSettings": "メールサーバの設定",
         "FaviconUpload": "アップロードするファビコンを選択",
+        "FileUploadDisabled": "PHP の設定で、ファイルのアップロードが有効になっていません。カスタムロゴをアップロードするには、 php.ini で %s を設定し、 Web サーバを再起動してください。",
         "ForBetaTestersOnly": "ベータテスターのみ",
         "ImageTracking": "画像によるトラッキング",
         "ImageTrackingIntro1": "訪問者がJavaScriptを無効にしている、またはJavaScriptを利用できない場合、訪問者を追跡する為に画像でトラッキングするリンクを使うことができます。",
@@ -19,6 +20,8 @@
         "ImageTrackingLink": "画像によるトラッキングのリンク",
         "ImportingServerLogs": "サーバーログのインポート",
         "ImportingServerLogsDesc": "ブラウザ（JavaScriptまたは画像リンクによる）を通して訪問者を追跡するのでは無く、継続的にサーバーのログをインポートします。%1$sサーバーログファイル解析%2$sの詳細はこちら。",
+        "InvalidPluginsWarning": "以下のプラグインは、 %1$s と互換性がないためロードできませんでした。　:%2$s.",
+        "InvalidPluginsYouCanUninstall": "これらのプラグインは、 %1$sManage Plugins%2$s ページでアップデートまたはアンインストールすることができます。",
         "JavaScriptTracking": "JavaScriptトラッキング",
         "JSTracking_CampaignKwdParam": "キャンペーン用キーワードのパラメーター",
         "JSTracking_CampaignNameParam": "キャンペーン名のパラメーター",
@@ -45,8 +48,10 @@
         "JSTrackingIntro5": "ページビューを追跡する以上のことをしたい場合は、%1$sPiwik Javascriptトラッキングドキュメント%2$sの使用可能な機能のリストを参照してください。これらの機能を使って、ゴール（目標）、カスタム変数、eコマース注文、破棄されたショッピングカート等々の追跡が可能です。",
         "LatestBetaRelease": "最新のベータ版リリース",
         "LatestStableRelease": "最新の安定版リリース",
+        "LogoNotWriteableInstruction": "Piwik デフォルトロゴの代わりにカスタムロゴを使用するには、このディレクトリへの書込権限を与えて下さい。 :%1$s ロゴを %2$s ファイルに保存するには、書込アクセスが必要です。",
         "LogoUpload": "アップロードするロゴを選択",
         "LogoUploadHelp": "%s ピクセル以上の高さで %s 形式のファイルをアップロードしてください",
+        "MenuDevelopment": "開発",
         "MenuDiagnostic": "診断",
         "MenuGeneralSettings": "全般の設定",
         "MenuManage": "管理",
@@ -57,8 +62,11 @@
         "OptOutForYourVisitors": "ビジターの Piwik オプトアウト",
         "PiwikIsInstalledAt": "Piwikがインストールされているのは",
         "PluginDescription": "Piwik の管理エリアです。",
+        "PluginSettingChangeNotAllowed": "\"%s\" プラグインで \"%s\" 設定されている値変更は許可されていません。",
+        "PluginSettingReadNotAllowed": "\"%s\" プラグインで \"%s\" 設定されている値の読み取りは許可されていません。",
         "PluginSettings": "プラグインの設定",
         "PluginSettingsIntro": "ここでは、次のサードパーティのプラグインの設定変更ができます",
+        "PluginSettingsValueNotAllowed": "\"%s\" プラグインの \"%s\" フィールドの値は許可されていません。",
         "SendPluginUpdateCommunication": "プラグインのアップデートがあった場合のメール通知",
         "SendPluginUpdateCommunicationHelp": "使用可能な新しいプラグインのバージョンがある場合、管理者ユーザーへメールが通知されます。",
         "StableReleases": "Piwikがビジネスの重要な一部である場合、最新の安定版を使用することを推奨します。また、最新のベータ版を使用し、バグを見つけたり、提案があれば、%sこちらをご覧ください%s。",
