--- a/plugins/CoreHome/lang/nl.json
+++ b/plugins/CoreHome/lang/nl.json
@@ -29,6 +29,7 @@
         "MakeADifference": "Maak een verschil: %1$sDoneer nu%2$s om Piwik 2.0 te steunen!",
         "MakeOneTimeDonation": "Doe een eennmalige donatie in de plaats.",
         "NoPrivilegesAskPiwikAdmin": "U bent aangemeld as '%s'. Maar het lijkt er op dat u geen rechten hebt op Piwik te bezoeken. %sVraag aan uw webmaster (klik hier voor e-mail)%s of hij u de juiste rechten wilt geven om de statistieken te bekijken.",
+        "OnlyForSuperUserAccess": "Deze widget wordt alleen getoond aan superusers.",
         "PageOf": "%1$s of %2$s",
         "PeriodDay": "Dag",
         "PeriodDays": "dagen",
