--- a/plugins/UsersManager/lang/fa.json
+++ b/plugins/UsersManager/lang/fa.json
@@ -27,6 +27,7 @@
         "ForAnonymousUsersReportDateToLoadByDefault": "برای کاربران ناشناس، تاریخ گزارش به طور پیش فرض باز",
         "IfYouWouldLikeToChangeThePasswordTypeANewOne": "اگر می خواهید از نوع رمز عبور را تغییر جدید است. در غیر این صورت این قسمت را خالی بگذارید.",
         "InjectedHostCannotChangePwd": "شما هم اکنون در حال بازدید توسط یک میزبان ناشناخته هستید(%1$s). شما نمی توانید رمز عبورتان را تغییر دهید تا زمانی که این مشکل را حل نکرده اید.",
+        "LastSeen": "آخرین بازدید",
         "MainDescription": "تصمیم بگیرید که کاربران که دسترسی Piwik را روی وب سایت خود را دارند. شما همچنین می توانید مجوز در تمام وب سایت در یک بار تنظیم شده است.",
         "ManageAccess": "مدیریت دسترسی",
         "MenuAnonymousUserSettings": "تنظیمات کاربران ناشناس",
