--- a/plugins/DevicesDetection/lang/cs.json
+++ b/plugins/DevicesDetection/lang/cs.json
@@ -5,7 +5,7 @@
         "CarBrowser": "Prohlížeč v autě",
         "Console": "Konzole",
         "dataTableLabelBrands": "Značka",
-        "dataTableLabelBrowserFamily": "Rodina prohlížeče",
+        "dataTableLabelBrowserFamily": "Rodina prohlížečů",
         "dataTableLabelModels": "Model",
         "dataTableLabelSystemVersion": "Verze operačního systému",
         "dataTableLabelTypes": "Typ",
@@ -18,7 +18,7 @@
         "FeaturePhone": "Ukázkový telefon",
         "OperatingSystemFamilies": "Rodiny operačních systémů",
         "OperatingSystemVersions": "Verze operačního systému",
-        "PluginDescription": "Tento zásuvný modul poskytuje rozšířené informace o mobilních iařízeních, jako např. výrobce, model (verze zařízení), vylepšenou detekci typu zařízení (TV, konzole, Chytré telefony, PC) a další. Tento zásuvný modul přidává nové hlášení v sekci návštěvníci > zařízení.",
+        "PluginDescription": "Tento zásuvný modul poskytuje rozšířené informace o mobilních zařízeních, jako např. výrobce, model (verze zařízení), vylepšenou detekci typu zařízení (TV, konzole, Chytré telefony, PC) a další. Tento zásuvný modul přidává nové hlášení v sekci návštěvníci > zařízení.",
         "SmartDisplay": "Chytrý displej",
         "Smartphone": "Chytrý telefon",
         "submenu": "Zařízení",
