--- a/plugins/Feedback/lang/cs.json
+++ b/plugins/Feedback/lang/cs.json
@@ -17,9 +17,9 @@
         "SendFeedback": "Odeslat odezvu",
         "SpecialRequest": "Máte speciální požadavek na tým Piwiku?",
         "ThankYou": "Děkujeme vám, že pomáháte Piwik dělat lepším!",
-        "TopLinkTooltip": "Řekni co si myslíš, nebo pořádek pomoc profesionála.",
+        "TopLinkTooltip": "Řekni co si myslíš, nebo požádej o pomoc profesionála.",
         "ViewAnswersToFAQ": "Zobrazit odpovědi na %sčasto kladené otázky%s",
-        "ViewUserGuides": "eNaučte se jak konfigurovat Piwik a efektivně analyzovat data s našimi %1$suživatelskými příručkami%2$s",
+        "ViewUserGuides": "Naučte se, jak konfigurovat Piwik a efektivně analyzovat data s našimi %1$suživatelskými příručkami%2$s",
         "VisitTheForums": "Navštivte %s forum%s",
         "WantToThankConsiderDonating": "Myslíte si, že je Piwik úžasný a chcete nám poděkovat?"
     }
