--- a/plugins/PrivacyManager/lang/cs.json
+++ b/plugins/PrivacyManager/lang/cs.json
@@ -4,16 +4,16 @@
         "AnonymizeIpInlineHelp": "Skryje poslední byte IP adresy návštěvníka, aby souhlasila se zákony vaší země.",
         "AnonymizeIpMaskLengtDescription": "Zvolte, kolik bitů z návštěvníkovy IP adresy má být maskováno.",
         "AnonymizeIpMaskLength": "%s bitů - např. %s",
-        "CannotLockSoDeleteLogActions": "Tabulka log_action nebude vyprázdněn: adejte Mysql uživateli %s privilegium LOCK TABLES.",
+        "CannotLockSoDeleteLogActions": "Tabulka log_action nebude vyprázdněna: dejte Mysql uživateli %s privilegium LOCK TABLES.",
         "ClickHereSettings": "Pro přístup k nastavení %s klikněte zde.",
         "CurrentDBSize": "Aktuální velikost databáze",
         "DBPurged": "Databáze vyprázdněna.",
         "DeleteBothConfirm": "Chystáte se povolit mazání dat logů i mazání dat hlášení. Tato operace trvale odstraní stará data. Opravdu to chcete provést?",
-        "DeleteDataDescription": "Můžete Piwik nastavit tak, aby po určitém čase mazal data rá stalogů nebo zpracovaná data hlášení. To pomáhá udržet malou databázi.",
-        "DeleteDataDescription2": "Pokud si to přejete, zpracovaných hlášení mohou zůstat a budou odstraněnajen data logů (zobrazení stránek, návštěvy a konverze) budou smazána. Nebo mohou být smazána hlášení a data logů mohou být zachována.",
+        "DeleteDataDescription": "Můžete Piwik nastavit tak, aby po určitém čase mazal stará data logů nebo zpracovaná data hlášení. To pomáhá udržet malou databázi.",
+        "DeleteDataDescription2": "Pokud si to přejete, zpracovaná hlášení mohou zůstat a budou odstraněna jen data logů (zobrazení stránek (návštěvy a konverze). Nebo mohou být smazána hlášení a data logů mohou být zachována.",
         "DeleteDataInterval": "Smazat stará data každých",
         "DeleteDataSettings": "Smazat staré logy návštěvníků a hlášení",
-        "DeleteLogDescription2": "Pokud povolíte automatické mazání logů, musíte zajistit, že jsou zpracovány všechna denní hlášení, aby nedošlo ke ztrátě dat.",
+        "DeleteLogDescription2": "Pokud povolíte automatické mazání logů, musíte zajistit, že jsou zpracována všechna denní hlášení, aby nedošlo ke ztrátě dat.",
         "DeleteLogInfo": "Logy z následujících tabulek budou smazány: %s",
         "DeleteLogsConfirm": "Chystáte se povolit mazání dat logů. Pokud budou odstraněna stará data logů a nebyla vytvořena historická hlášení, nebudete schopen zobrazit stará analytická data. Oprav",
         "DeleteLogsOlderThan": "Vymazat logy starší než",
@@ -28,7 +28,7 @@
         "DeleteSchedulingSettings": "Nastavení plánování",
         "DoNotTrack_Description": "Do not track je návrh technologie a politiky, která umožňuje uživatelům indikovat, že si nepřejí být stránkami, které navštěvují a to včetně služeb webové analýzi, reklamních služeb a sociálních platforem.",
         "DoNotTrack_Disable": "Zakázat podporu Do not track",
-        "DoNotTrack_Disabled": "Pivik sleduje všechny návštěvníky včetně těch, kteří v možnostech svého webového prohlížeče nastavili, že si nepřejí být sledováni.",
+        "DoNotTrack_Disabled": "Piwik sleduje všechny návštěvníky včetně těch, kteří v možnostech svého webového prohlížeče nastavili, že si nepřejí být sledováni.",
         "DoNotTrack_DisabledMoreInfo": "Doporučujeme respektovat soukromí vašich návštěvníků a podporu Do not track povolit.",
         "DoNotTrack_Enable": "Povolit podporu Do not track",
         "DoNotTrack_Enabled": "Aktuálně respektujete soukromí vašich návštěvníků, víborně!",
@@ -38,7 +38,7 @@
         "EstimatedSpaceSaved": "Odhadované ušetřené místo",
         "GeolocationAnonymizeIpNote": "Poznámka: Geolokace bude mít přibližně stejnou přesnost, když je anonymizován 1 bit. Pokud jsou anonymizovány 2 bity a více, geolokace bude nepřesná.",
         "GetPurgeEstimate": "Získat odhad po vyprázdnění",
-        "KeepBasicMetrics": "Uchovat základní měření (návštěvy, zobrazení stránek, odchody, cíle, atd.)",
+        "KeepBasicMetrics": "Uchovat základní metriky (návštěvy, zobrazení stránek, odchody, cíle, atd.)",
         "KeepDataFor": "Uchovávat všechna data po",
         "KeepReportSegments": "Pro výše uchovávaná data také zachovat segmentovaná hlášení",
         "LastDelete": "Poslední mazání bylo v",
