--- a/plugins/UserCountry/lang/cs.json
+++ b/plugins/UserCountry/lang/cs.json
@@ -12,7 +12,7 @@
         "CityAndCountry": "%1$s, %2$s",
         "Continent": "Kontinent",
         "continent_afr": "Afrika",
-        "continent_amc": "Středná Amerika",
+        "continent_amc": "Střední Amerika",
         "continent_amn": "Jižní Amerika",
         "continent_ams": "Severní a střední Amerika",
         "continent_ant": "Antarktida",
@@ -21,7 +21,7 @@
         "continent_oce": "Oceanie",
         "Country": "Státy",
         "country_a1": "Anonymní proxy",
-        "country_a2": "Staelitní poskytovatel",
+        "country_a2": "Satelitní poskytovatel",
         "country_ac": "Ascension Islands",
         "country_ad": "Andorra",
         "country_ae": "United Arab Emirates",
