--- a/plugins/VisitsSummary/lang/cs.json
+++ b/plugins/VisitsSummary/lang/cs.json
@@ -12,7 +12,7 @@
         "NbOutlinksDescription": "%s externích odkazů",
         "NbPageviewsDescription": "%s zobrazení",
         "NbSearchesDescription": "Celkem %s vyhledávání na vašich stránkách",
-        "NbUniqueDownloadsDescription": "%s unikátních stražení",
+        "NbUniqueDownloadsDescription": "%s unikátních stažení",
         "NbUniqueOutlinksDescription": "%s unikátních externích odkazů",
         "NbUniquePageviewsDescription": "%s unikátních zobrazení",
         "NbUniqueVisitors": "%s unikátních návštěvníků",
