--- a/lang/cs.json
+++ b/lang/cs.json
@@ -10,12 +10,12 @@
         "Add": "Přidat",
         "AfterEntry": "Po vložení dne",
         "All": "Vše",
-        "AllowPiwikArchivingToTriggerBrowser": "Spouštět archovování když jsou hlášení prohlížena ve Web prohlížeči",
+        "AllowPiwikArchivingToTriggerBrowser": "Povolit spouštění archivování, když jsou hlášení prohlížena ve Webovém prohlížeči",
         "AllWebsitesDashboard": "Nástěnka pro všechny weby",
         "And": "a",
         "API": "API",
-        "ApplyDateRange": "Aplikovat vybraný rozsah",
-        "ArchivingInlineHelp": "Pro web stránky se střední, nebo vysokou návštěvností je doporučeno zakázat archivování Piwiku z web prohlížeče. Místo toho doporučujeme vytvoření úlohy pro cron",
+        "ApplyDateRange": "Použít vybraný rozsah",
+        "ArchivingInlineHelp": "Pro web stránky se střední nebo vysokou návštěvností je doporučeno zakázat archivování Piwiku z webového prohlížeče. Místo toho doporučujeme vytvoření úlohy pro cron",
         "ArchivingTriggerDescription": "Doporučeno pro větší instalace Piwiku, potřebujete %snastavit cron úlohu%s na automatické spracování hlášení.",
         "AuthenticationMethodSmtp": "Autentizační metoda SMTP",
         "AverageOrderValue": "Průměrná hodnota objednávky",
@@ -23,12 +23,12 @@
         "AverageQuantity": "Průměrné množství",
         "BackToPiwik": "Zpět do Piwiku",
         "Broken": "Rozbité",
-        "BrokenDownReportDocumentation": "Je členěn do různých hlášení, která jsou zobrazena dolní části stránky. Vybraný graf můžete zvětšit tak, že na něj kliknete.",
+        "BrokenDownReportDocumentation": "Je členěn do různých hlášení, která jsou zobrazena v dolní části stránky. Vybraný graf můžete zvětšit tak, že na něj kliknete.",
         "Cancel": "Zrušit",
         "CannotUnzipFile": "Nelze rozbalit soubor %1$s: %2$s",
         "ChangePassword": "Změnit heslo",
-        "ChangeTagCloudView": "Všimněte si, že můžete zobrazit hlášení jinak, než jako tag cloud. Pro změnu zobrazení použíjte ovládací prvky pod ním.",
-        "ChooseDate": "Vyber datum",
+        "ChangeTagCloudView": "Všimněte si, že můžete zobrazit hlášení jinak, než jako tag cloud. Pro změnu zobrazení použijte ovládací prvky pod ním.",
+        "ChooseDate": "Zvolte datum",
         "ChooseLanguage": "Zvolte jazyk",
         "ChoosePeriod": "Zvolte období",
         "ChooseWebsite": "Zvolte web",
@@ -37,51 +37,51 @@
         "ClickToChangePeriod": "Klikni znovu pro změnu období.",
         "Close": "Zavřít",
         "ColumnActionsPerVisit": "Akcí za návštěvu",
-        "ColumnActionsPerVisitDocumentation": "Průměrní počet akcí (zobrazení stránek, stažení nebo externích odkazů) za návštěvu.",
-        "ColumnAverageGenerationTime": "Průměrný generovaný čas",
+        "ColumnActionsPerVisitDocumentation": "Průměrný počet akcí (zobrazení stránek, stažení nebo externích odkazů) za návštěvu.",
+        "ColumnAverageGenerationTime": "Průměrný čas generování",
         "ColumnAverageGenerationTimeDocumentation": "Průměrný čas, za který byla stránka vygenerována. Toto měření zahrnuje čas, který potřeboval server k vygenerování stránky plus čas, který potřeboval klient k jejímu stažení. Kratší průměrný čas znamená rychlejší stránku.",
-        "ColumnAverageTimeOnPage": "Přůměrně času na stránce",
-        "ColumnAverageTimeOnPageDocumentation": "Průměrný celkový čas strávený na stránce (pouze konkrétní stránky),",
+        "ColumnAverageTimeOnPage": "Průměrný čas na stránce",
+        "ColumnAverageTimeOnPageDocumentation": "Průměrný celkový čas strávený na stránce (pouze konkrétní stránky, ne celý web).",
         "ColumnAvgTimeOnSite": "Průměrně času na stránkách",
         "ColumnAvgTimeOnSiteDocumentation": "Průměrná doba jedné návštěvy",
         "ColumnBounceRate": "Odchozí frekvence",
         "ColumnBounceRateDocumentation": "Procento návštěv, které měly jedno zobrazení. To znamená návštěvníci, kteří po zobrazení stránky okamžitě odešli.",
         "ColumnBounceRateForPageDocumentation": "Procento návštěv, které začaly a skončily touto stránkou",
         "ColumnBounces": "Ihned odchozí",
-        "ColumnBouncesDocumentation": "Počet návštěv, které začaly a skončily na touto stránkou. To znamená, kteří navštívily jen tuto stránku.",
+        "ColumnBouncesDocumentation": "Počet návštěv, které začaly a skončily na této stránce. To znamená, kteří navštívily jen tuto stránku.",
         "ColumnConversionRate": "Frekvence konverzí",
-        "ColumnConversionRateDocumentation": "Procento návštěv, které provedli konverzi Cíle,",
+        "ColumnConversionRateDocumentation": "Procento návštěv, které provedly konverzi Cíle.",
         "ColumnDestinationPage": "Cílová stránka",
         "ColumnEntrances": "Vstupy",
-        "ColumnEntrancesDocumentation": "Počet návštěvníků, kteří započali návštěvu touto stránkovu.",
+        "ColumnEntrancesDocumentation": "Počet návštěvníků, kteří započali návštěvu touto stránkou.",
         "ColumnExitRate": "Frekvence odchodů",
         "ColumnExitRateDocumentation": "Procentuální vyjádření těch, kteří opustili tuto stránku po jejím zobrazení.",
         "ColumnExits": "Odchody",
-        "ColumnExitsDocumentation": "Počet návštěv, které skončily touto stránkovu.",
+        "ColumnExitsDocumentation": "Počet návštěv, které skončily touto stránkou.",
         "ColumnGenerationTime": "Čas generování",
         "ColumnKeyword": "Klíčové slovo",
         "ColumnLabel": "Popisek",
         "ColumnMaxActions": "Maximální počet akcí při jedné návštěvě",
         "ColumnNbActions": "Akce",
-        "ColumnNbActionsDocumentation": "Počet akcí Vašich návstěvníků. Akcí se rozumí zobrazení stránky, stažení a kliknutí na externí odkazy.",
+        "ColumnNbActionsDocumentation": "Počet akcí Vašich návštěvníků. Akcí se rozumí zobrazení stránky, stažení a kliknutí na externí odkazy.",
         "ColumnNbUniqVisitors": "Jedineční návštěvníci",
         "ColumnNbUniqVisitorsDocumentation": "Počet neduplicitních návštěvníků, kteří navštívili vaše stránky. Každý návštěvník je počítán pouze jednou, ikdyž třeba přišel několikrát za den.",
         "ColumnNbVisits": "Návštěv",
-        "ColumnNbVisitsDocumentation": "Pokud návštěvník přijde na vaše stránky poprvé, nebo po třiceti minutách, je tato návštěva započítána jako nová.",
+        "ColumnNbVisitsDocumentation": "Pokud návštěvník přijde na vaše stránky poprvé nebo po třiceti minutách, je tato návštěva započítána jako nová.",
         "ColumnPageBounceRateDocumentation": "Procento návštěv, které začaly touto stránkou a ihned ji opustili.",
         "ColumnPageviews": "Zobrazení stránek",
-        "ColumnPageviewsDocumentation": "Počet navštívení této stránky.",
+        "ColumnPageviewsDocumentation": "Počet návštěv této stránky.",
         "ColumnPercentageVisits": "% návštěv",
         "ColumnRevenue": "Příjem",
         "ColumnSumVisitLength": "Celkový čas strávený návštěvníky (v sekundách)",
         "ColumnTotalPageviews": "Celkem zobrazených stránek",
-        "ColumnUniqueEntrances": "Unikátních navštívení stránky",
+        "ColumnUniqueEntrances": "Unikátních vstupů",
         "ColumnUniqueExits": "Unikátních opuštění stránky",
         "ColumnUniquePageviews": "Jedinečná zobrazení stránek",
         "ColumnUniquePageviewsDocumentation": "Počet návštěvníků, kteří navštívily tuto stránku. Pokud byla tato stránka navštívena několikrát, návštěva je započítána jen jednou.",
         "ColumnValuePerVisit": "Hodnota za návštěvu",
         "ColumnViewedAfterSearch": "Kliknuto ve výsledcích vyhledávání",
-        "ColumnViewedAfterSearchDocumentation": "ePočet návštěv této stránky poté, co návštěvník provedl vyhledávání a kliknul na tuto stránku.",
+        "ColumnViewedAfterSearchDocumentation": "Počet návštěv této stránky poté, co návštěvník provedl vyhledávání a kliknul na tuto stránku.",
         "ColumnVisitDuration": "Doba návštěvy (v sekundách)",
         "ColumnVisitsWithConversions": "Návštěvy s přechodem",
         "ConfigFileIsNotWritable": "Konfigurační soubor Piwiku %s není zapisovatelný, některé změny nebudou uloženy. %s Prosím upravte oprávnění ke konfiguračnímu souboru",
@@ -121,15 +121,15 @@
         "Desktop": "Desktop",
         "Details": "Detaily",
         "Discount": "Sleva",
-        "DisplaySimpleTable": "Zobrazit jednotuchou tabulku",
+        "DisplaySimpleTable": "Zobrazit jednoduchou tabulku",
         "DisplayTableWithGoalMetrics": "Zobrazit tabulku s měřením cílů",
         "DisplayTableWithMoreMetrics": "Zobrazit tabulku s více měřeními",
         "Documentation": "Dokumentace",
         "Donate": "Přispějte",
         "Done": "Hotovo",
         "Download": "Stáhnout",
-        "DownloadFail_FileExists": "Sobor %s již existuje!",
-        "DownloadFail_FileExistsContinue": "Pokus o pokračování stahování %s, ale celý stažený soubor už existuje!",
+        "DownloadFail_FileExists": "Soubor %s již existuje!",
+        "DownloadFail_FileExistsContinue": "Pokus o pokračování stahování %s, ale celý stažený soubor již existuje!",
         "DownloadFail_HttpRequestFail": "Nepodařilo se stáhnout soubor. Něco může být v nepořádku se stránkou, z níž byl soubor stahován. Můžete to zkusit později nebo můžete soubor stáhnout sami.",
         "DownloadFullVersion": "%1$sStáhnout%2$s plnou verzi! Podívejte se na %3$s",
         "DownloadPleaseRemoveExisting": "Pokud to chcete nahradit, odstraňte stávající soubor.",
@@ -138,7 +138,7 @@
         "EcommerceVisitStatusDesc": "Stav elektronického obchodu na konci návštěvy",
         "EcommerceVisitStatusEg": "Například pro výběr všech návštěv, které obsahují elektronickou objednávku, API požadavek by byl %s",
         "Edit": "Upravit",
-        "EncryptedSmtpTransport": "Zadejte šifrování transportvní vrsty vyžadované vaším SMTP serverem.",
+        "EncryptedSmtpTransport": "Zadejte šifrování transportní vrstvy vyžadované vaším SMTP serverem.",
         "EnglishLanguageName": "Czech",
         "Error": "Chyba",
         "ErrorRequest": "Ajaj! Při požadavku došlo k chybě. Na serveru mohlo dojít k dočasnému problému, nebo jste požádali o hlášení s příliš mnoha daty. Prosím, zkuste to znovu. Pokud se bude problém opakovat, %skontaktujte svého administrátora Piwiku%s.",
@@ -150,7 +150,7 @@
         "ExceptionFileIntegrity": "Test integrity selhal: %s",
         "ExceptionFilesizeMismatch": "Nesouhlasí velikost souboru: %1$s (očekávaná délka: %2$s, nalezeno: %3$s)",
         "ExceptionIncompatibleClientServerVersions": "Vaše %1$s verze klienta je %2$s tato je ale nekompatibilní se serverem %3$s.",
-        "ExceptionInvalidAggregateReportsFormat": "Agregovaný formát hlášený %s není platný. Zkuste místo toho nějaký z %s.",
+        "ExceptionInvalidAggregateReportsFormat": "Agregovaný formát hlášení %s není platný. Zkuste místo toho nějaký z %s.",
         "ExceptionInvalidArchiveTimeToLive": "Dnešní doba života archivu musí být číslo větší než nula",
         "ExceptionInvalidDateFormat": "Formát data musí být: %s nebo klíčové slovo podporované funkcí %s (více informací viz %s)",
         "ExceptionInvalidDateRange": "Datum '%s' není v platném rozmezí. Může mít následující formát: %s.",
@@ -233,7 +233,7 @@
         "LongMonth_7": "Červenec",
         "LongMonth_8": "Srpen",
         "LongMonth_9": "Září",
-        "MainMetrics": "Vlastní měření",
+        "MainMetrics": "Hlavní metriky",
         "Matches": "Shody",
         "MediumToHighTrafficItIsRecommendedTo": "Pro weby se středním, nebo velkým provozem doporučujeme zpracovat dnešní hlášení každou půlhodinu (%s vteřin), nebo každou hodinu (%s vteřin)",
         "Metadata": "Meta data",
@@ -314,14 +314,14 @@
         "Plugins": "Zásuvné moduly",
         "PoweredBy": "Běží na",
         "Previous": "Předchozí",
-        "PreviousDays": "předešlých %s dní (kromě dneška)",
+        "PreviousDays": "předešlých %s dnů (kromě dneška)",
         "PreviousDaysShort": "Předchozích %s dnů",
         "Price": "Cena",
         "ProductConversionRate": "Konverzní poměr",
         "ProductRevenue": "Hodnota produktu",
         "PurchasedProducts": "Zakoupené produkty",
         "Quantity": "Množství",
-        "RangeReports": "Upravit rozmezí dní",
+        "RangeReports": "Vlastní rozsahy dat",
         "ReadThisToLearnMore": "%1$sPokud se chcete dozvědět více, přečtěte si toto.%2$s",
         "Recommended": "(doporučuje se)",
         "RecordsToPlot": "Záznamy k vykreslení",
@@ -375,7 +375,7 @@
         "ShortMonth_8": "Srp",
         "ShortMonth_9": "Zář",
         "Show": "zobrazit",
-        "SingleWebsitesDashboard": "Nástěnka jedněch stránek",
+        "SingleWebsitesDashboard": "Nástěnka pro jedny stránek",
         "SmallTrafficYouCanLeaveDefault": "Pro weby s malým provozem můžete ponechat výchozích %s sekund a uvidíte všechna hlášení v reálném čase",
         "SmtpEncryption": "SMTP šifrování",
         "SmtpPassword": "Heslo SMTP",
@@ -411,9 +411,9 @@
         "View": "Zobrazit",
         "ViewDocumentationFor": "Zobrazit dokumentaci pro %1$s",
         "Visit": "Návštěva",
-        "VisitConvertedGoal": "Návštěva, která převedla alespoň jeden Cíl.",
-        "VisitConvertedGoalId": "Návštěva, která převedla konkrétní ID Cíl.",
-        "VisitConvertedNGoals": "Návstěva převedla %s Cílů.",
+        "VisitConvertedGoal": "Návštěva, která provedla alespoň jednu konverzi Cíle.",
+        "VisitConvertedGoalId": "Návštěva, která provedla konverzi konkrétního ID Cíle.",
+        "VisitConvertedNGoals": "Návštěva provedla %s konverzí Cílůb.",
         "VisitDuration": "Průměrná doba trvání návštěv (v sekundách)",
         "Visitor": "Návštěvník",
         "VisitorID": "ID návštěvníka",
@@ -421,7 +421,7 @@
         "Visitors": "Návštěvníci",
         "VisitsWith": "Návštěv s %s",
         "VisitType": "Typ návštěvníka",
-        "VisitTypeExample": "Například pro výběr všech návštěvníků, kteří se vrátili na stránky včetně těch, co si v předcchozích návštěvách něco koupili, API požadavek by obsahoval %s",
+        "VisitTypeExample": "Například pro výběr všech návštěvníků, kteří se vrátili na stránky včetně těch, co si v předcchozích návštěvách něco koupili, by API požadavek obsahoval %s",
         "Warning": "Varování",
         "WarningFileIntegrityNoManifest": "Test integrity nemůže být proveden z důvodů chybějícího souboru manifest.inc.php.",
         "WarningFileIntegrityNoManifestDeployingFromGit": "Pokud nasazujete Piwik z Gitu, pak je tato zpráva normální.",
