--- a/plugins/CoreUpdater/lang/cs.json
+++ b/plugins/CoreUpdater/lang/cs.json
@@ -1,6 +1,6 @@
 {
     "CoreUpdater": {
-        "ClickHereToViewSqlQueries": "Klikněte zde, abyste viděli a zkopírovali SQL dotazy, které mají být spuštěny",
+        "ClickHereToViewSqlQueries": "Klikněte zde pro zobrazení SQL dotazů s možností je zkopírovat, které mají být spuštěny",
         "CreatingBackupOfConfigurationFile": "Vytvářím zálohu konfiguračního souboru v %s",
         "CriticalErrorDuringTheUpgradeProcess": "Při aktualizaci nastala kritická chyba:",
         "DatabaseUpgradeRequired": "Vyžadováno povýšení databáze",
@@ -20,13 +20,13 @@
         "ExceptionArchiveIncompatible": "Nekompatibilní archiv: %s",
         "ExceptionArchiveIncomplete": "Archiv je nekompletní: některé soubory chybí (např.: %s).",
         "FeedbackRequest": "Zde můžete s týmem Piwiku sdílet nápady a návrhy:",
-        "HelpMessageContent": "Zkontrolujte %1$s Piwik FAQ %2$s , který vysvětluje nejčastějsí chybi při aktualizaci. %3$s Požádejte vašeho systémového administrátora - může vám pomoct s chybou, která je nejčastěji způsobena nastavením serveru MySQL.",
+        "HelpMessageContent": "Zkontrolujte %1$s Piwik FAQ %2$s , kde jsou vysvětleny nejčastější chybi při aktualizaci. %3$s Požádejte vašeho systémového administrátora - může vám pomoct s chybou, která je nejčastěji způsobena nastavením serveru MySQL.",
         "HelpMessageIntroductionWhenError": "Níže je hlavní chybová hláška. Pomůže vám zjistit příčinu, ale pokud budete potřebovat další pomoc:",
         "HelpMessageIntroductionWhenWarning": "Aktualizace proběhla v pořádku, ale byly zaznamenány problémy. Prosím přečtěte si jejich popis výše. Pro další pomoc:",
         "HighTrafficPiwikServerEnableMaintenance": "Pokud provozujete Piwik server s velkým provozem, doporučujeme %sna chvíli zakázat sledování návštěvníků a přepnout uživatelské rozhraní do režimu údržby%s.",
         "IncompatbilePluginsWillBeDisabledInfo": "Poznámka: Některé zásuvné moduly nejsou kompatibilní s Piwikem %s. Budou zakázány při aktualizaci:",
         "InstallingTheLatestVersion": "Instaluji poslední verzi",
-        "MajorUpdateWarning1": "Toto je důležitá aktualizace! Zabere více času, než obvykle.",
+        "MajorUpdateWarning1": "Toto je velká aktualizace! Zabere více času, než obvykle.",
         "MajorUpdateWarning2": "Následující doporučení je především důležité pro velké instalace.",
         "NoteForLargePiwikInstances": "Důležitá poznámka pro rozsáhlé instalace Piwiku",
         "NoteItIsExpectedThatQueriesFail": "Poznámka: Pokud budete SQL dotazy spouštět ručně, některé z nich selžou. V tom případě chyby jednoduše ignorujte a spusťte další dotazy",
@@ -47,8 +47,8 @@
         "TheUpgradeProcessMayTakeAWhilePleaseBePatient": "Aktualizace databáze může chvíli trvat, buďte prosím trpěliví.",
         "UnpackingTheUpdate": "Rozbaluji aktualizaci",
         "UpdateAutomatically": "Aktualizovat automaticky",
-        "UpdateHasBeenCancelledExplanation": "One Click aktualizace Piwiku byla stornována. Pokud nemůžete opravit chybu je doporučeno Piwik aktualizovat manuálně. %1$s Prosím zkontrolujte pro začátek %2$sDokumentaci k aktualizaci%3$s!",
-        "UpdateTitle": "Piwik › Update",
+        "UpdateHasBeenCancelledExplanation": "One Click aktualizace Piwiku byla zrušena. Pokud nemůžete opravit chybu je doporučeno Piwik aktualizovat manuálně. %1$s Prosím zkontrolujte nejdříve %2$sdokumentaci k aktualizaci%3$s!",
+        "UpdateTitle": "Aktualizovat",
         "UpgradeComplete": "Aktualizace je kompletní!",
         "UpgradePiwik": "Aktualizovat Piwik",
         "VerifyingUnpackedFiles": "Ověřuji rozbalené soubory",
@@ -57,6 +57,6 @@
         "YouCanUpgradeAutomaticallyOrDownloadPackage": "Můžete aktualizovat na verzi %s automaticky, nebo si stáhněte balíček a nainstalujte jej manuálně:",
         "YouCouldManuallyExecuteSqlQueries": "Pokud nemůžete použít aktualizaci z příkazového řádku a Piwik nelze aktualizovat (díky vypršení časového limitu v databázi, prohlížeči, nebo z jakéhokoliv jiného důvodu), můžete spustit SQL dotazy ručně",
         "YouMustDownloadPackageOrFixPermissions": "Piwik nemůže přepsat Vaši stávající instalaci. Můžete buď opravit oprávnění k adresářům\/souborům, nebo stáhnout balíček a nainstalovat verzi %s ručně",
-        "YourDatabaseIsOutOfDate": "Vaše databáze Piwiku je zastaralá a musí být aktualizována než budete pokračovat."
+        "YourDatabaseIsOutOfDate": "Vaše databáze Piwiku je zastaralá a musí být aktualizována, než budete pokračovat."
     }
 }
