--- a/plugins/Dashboard/lang/cs.json
+++ b/plugins/Dashboard/lang/cs.json
@@ -6,28 +6,28 @@
         "CopyDashboardToUser": "Zkopírovat přehled uživateli",
         "CreateNewDashboard": "Vytvořit novou nástěnku",
         "Dashboard": "Nástěnka",
-        "DashboardCopied": "Přehled byl úspěšně nakopírován vybranému uživateli.",
+        "DashboardCopied": "Přehled byl úspěšně zkopírován vybranému uživateli.",
         "DashboardEmptyNotification": "Vaše nástěnka neobsahuje žádné widgety. Nějaké přidejte, nebo obnovte výchozí výběr widgetů na nástěnce.",
         "DashboardName": "Jméno nástěnky:",
         "DashboardOf": "Nástěnka %s",
         "DefaultDashboard": "Výchozí nástěnka - používáte výchozí rozvržení nástěnky",
-        "DeleteWidgetConfirm": "Jste si jistí, že chcete odstranit tento widget z nástěnky?",
+        "DeleteWidgetConfirm": "Opravdu chcete odstranit tento widget z nástěnky?",
         "EmptyDashboard": "Prázdná nástěnka - vyberte si své oblíbené widgety",
         "LoadingWidget": "Načítám widget, prosím čekejte...",
         "ManageDashboard": "Správa nástěnky",
         "Maximise": "Maximalizovat",
         "Minimise": "Minimalizovat",
-        "NotUndo": "Nemůžete vrátit zpět tuto operaci.",
-        "PluginDescription": "Váše nástěnka analýzy Web stránek. Můžete si jí upravit: přidat nové widgety, změnit jejich pořadí. Každý uživatel přistupuje ke své vlastní nástěncei",
+        "NotUndo": "Tuto operaci nemůžete vrátit zpět.",
+        "PluginDescription": "Vaše nástěnka webové analýzy. Můžete si ji upravit: přidat nové widgety, změnit jejich pořadí. Každý uživatel přistupuje ke své vlastní nástěnce.",
         "RemoveDashboard": "Odstranit nástěnku",
         "RemoveDashboardConfirm": "Opravdu chcete odstranit nástěnku: %s?",
         "RenameDashboard": "Přejmenovat nástěnku",
         "ResetDashboard": "Obnovit nástěnku",
         "ResetDashboardConfirm": "Opravdu chcete obnovit nastavení nástěnky do továrního stavu?",
-        "SelectDashboardLayout": "Prosím vyberte nové rozvržení návštěnky",
+        "SelectDashboardLayout": "Prosím vyberte nové rozvržení nástěnky",
         "SelectWidget": "Zvolte widget pro přidání na nástěnku",
         "SetAsDefaultWidgets": "Nastavit výchozí výběr widgetů",
-        "SetAsDefaultWidgetsConfirm": "Opravdu chcete nastavit toto rozvržení widgetů jako výchozí rozvržení?",
+        "SetAsDefaultWidgetsConfirm": "Opravdu chcete nastavit toto rozvržení widgetů jako výchozí?",
         "SetAsDefaultWidgetsConfirmHelp": "Tyto widgety a jejich rozvržení budou použity vždy, když někdo vytvoří novou nástěnku nebo použije vlastnost %s.",
         "TopLinkTooltip": "Zobraz analytické hlášení webu pro %s.",
         "WidgetNotFound": "Widget nenalezen",
