Refs #3490 Adding segment 'userId==' + some '&segment=userId==' integration tests + doc blocks

--- a/lang/en.json
+++ b/lang/en.json
@@ -405,6 +405,7 @@
         "Unknown": "Unknown",
         "Upload": "Upload",
         "UsePlusMinusIconsDocumentation": "Use the plus and minus icons on the left to navigate.",
+        "UserId": "User ID",
         "Username": "Username",
         "UseSMTPServerForEmail": "Use SMTP server for e-mail",
         "Value": "Value",
