Fixes #5355, add plus/minus icons to left of rows w/ subtables that change when tables expand/contract. Also add tooltip to rows w/ subtables.

--- a/plugins/CoreHome/lang/en.json
+++ b/plugins/CoreHome/lang/en.json
@@ -58,6 +58,7 @@
         "UnFlattenDataTable": "The report is flat %s Make it hierarchical",
         "ViewAllPiwikVideoTutorials": "View all Piwik Video Tutorials",
         "WebAnalyticsReports": "Web Analytics Reports",
-        "YouAreUsingTheLatestVersion": "You are using the latest version of Piwik!"
+        "YouAreUsingTheLatestVersion": "You are using the latest version of Piwik!",
+        "ClickRowToExpandOrContract": "Click this row to expand or contract the subtable."
     }
 }
