Fixes #5923, add INI config option allow_adding_segments_for_all_websites that allows users to disable the ability to add segments affecting all websites.

--- a/plugins/SegmentEditor/lang/en.json
+++ b/plugins/SegmentEditor/lang/en.json
@@ -24,6 +24,7 @@
         "VisibleToMe": "me",
         "YouMayChangeSetting": "Alternatively you may change the setting in the config file (%s), or edit this Segment and choose '%s'.",
         "YouMustBeLoggedInToCreateSegments": "You must be logged in to create and edit custom visitor segments.",
-        "YouDontHaveAccessToCreateSegments": "You don't have the required access level to create and edit segments."
+        "YouDontHaveAccessToCreateSegments": "You don't have the required access level to create and edit segments.",
+        "AddingSegmentForAllWebsitesDisabled": "Adding segments for all websites has been disabled."
     }
 }
