--- a/plugins/CoreAdminHome/lang/en.json
+++ b/plugins/CoreAdminHome/lang/en.json
@@ -27,7 +27,7 @@
         "JSTracking_CustomCampaignQueryParam": "Use custom query parameter names for the campaign name & keyword",
         "JSTracking_CustomCampaignQueryParamDesc": "Note: %1$sPiwik will automatically detect Google Analytics parameters.%2$s",
         "JSTracking_DisableCookies": "Disable all tracking cookies",
-        "JSTracking_DisableCookiesDesc": "Disables all first party cookies. Existing Piwik cookies for this websites will be deleted on the next page view.",
+        "JSTracking_DisableCookiesDesc": "Disables all first party cookies. Existing Piwik cookies for this website will be deleted on the next page view.",
         "JSTracking_EnableDoNotTrack": "Enable client side DoNotTrack detection",
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "Note: Server side DoNotTrack support has been enabled, so this option will have no effect.",
         "JSTracking_EnableDoNotTrackDesc": "So tracking requests will not be sent if visitors do not wish to be tracked.",
